src/components/Navbar/Navbar.css
@media only screen and (max-width: 2560px) {
  .Navbar {
    background-color: white;
    z-index: 10;
    left: 0%; /* HAS TO MATCH APP margin-left - 2*/
    right: 0%; /* HAS TO MATCH APP margin-right - 2*/
    top: 0;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 75px;
    align-items: center;
    position: relative;
  }

  .Navbar img {
    margin-top: 13px;
    padding-left: 10px;
    margin-left: 20px;
    height: auto;
    width: 60px;
  }

  .PageTitle {
    align-self: flex-start;
  }

  .NavLinks {
    display: flex;
    flex-direction: row;
    margin-right: 20px;
    align-items: center;
  }

  .PageLinks {
    margin-right: auto;
    height: auto;
    display: flex;
  }

  .PageLinks a {
    color: black;
    margin-left: 16px;
    text-decoration: none;
    padding: 6px;
    font-weight: 700;
    font-size: 15px;
  }

  .NavLinks a {
    color: black;
  }

  .NavLinks box-icon {
    margin: 15px;
  }

  .MobileMenu {
    display: none;
  }
}

@media only screen and (max-width: 950px) {
  .Navbar {
    left: 0;
    right: 0;
  }

  .PageLinks {
    display: none;
  }

  .NavLinks {
    display: flex;
    flex-direction: row;
    margin-right: 1px;
    align-items: center;
  }
}

